--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.166.0",
     "framer-motion": "^11.3.6",
+    "leva": "^0.9.35",
     "meshline": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "three": "^0.166.1",
     "typed.js": "^2.1.0"
   },
