--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "react-scroll": "^1.9.0",
     "three": "^0.166.1",
     "typed.js": "^2.1.0"
   },
